# types-of-cvd-simulator-app

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  algorithms.rst  api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/_static/: custom.css
examples/: original_script.py
src/: main.py
src/cvd_simulator/: __init__.py  config.py  enums.py  exceptions.py  presets.py
src/cvd_simulator/core/: __init__.py  image_loader.py  output_writer.py  simulator.py  video_processor.py
src/cvd_simulator/interfaces/: __init__.py  cli.py
src/cvd_simulator/utils/: __init__.py  logging_config.py  metadata.py  profiling.py  validators.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance.py
tests/integration/: __init__.py  test_end_to_end.py
tests/property/: test_properties.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_image_loader.py  test_metadata.py  test_presets.py  test_profiling.py  test_simulator.py  test_validators.py
